Closed Bug 521933 Opened 15 years ago Closed 15 years ago

Warn about ExtraFonts in checkForProblemAddOns

Categories

(Camino Graveyard :: General, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino2.0

People

(Reporter: alqahira, Assigned: alqahira)

Details

(Whiteboard: [camino-2.0])

Attachments

(1 file)

ExtraFonts was last compatible with Camino since 1.5.x and crashes Camino 2 without fail.  We should warn users about it when they upgrade to Camino 2.0.
Attachment #405962 - Flags: superreview?(stuart.morgan+bugzilla)
Comment on attachment 405962 [details] [diff] [review]
Adds ExtraFonts to the list of prefPanes

sr=smorgan
Attachment #405962 - Flags: superreview?(stuart.morgan+bugzilla) → superreview+
Landed on cvs trunk and CAMINO_2_0_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [camino-2.0]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: