Bug 521933 - Warn about ExtraFonts in checkForProblemAddOns. r/sr=smorgan